# Eigenvector-preparation-Grover-QPE-Qiskit-demo

./: README.md  analysis.py  pyproject.toml  requirements.txt  test_n6_demo.py
eigenprep/: __init__.py  circuits.py
notebooks/: n6_demo.ipynb  original_notebook.ipynb
scripts/: run_n6_demo.py
