[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigenprep-demo"
version = "0.1.0"
description = "Eigenvector preparation demo using Grover-amplified QPE in Qiskit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "qiskit>=1.0",
    "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
include = ["eigenprep*"]
